tests/toy/neg/000805_mutation.toylang
program a = { a = then a == a; } .
